k8s/wordpress/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: wordpress
  labels:
    app: natura
spec:
  replicas: 1
  selector:
    matchLabels:
      app: natura
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: natura
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        imagePullPolicy: IfNotPresent
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
