k8s/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: natura
spec:
  replicas: 1
  selector:
    matchLabels:
      app: natura
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: natura
        tier: frontend
    spec:
      containers:
      - image: wordpress:php7.4
        imagePullPolicy: IfNotPresent
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
          protocol: TCP
