k8s/wordpress/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: wordpress
  labels:
    app: natura
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: natura
    tier: mysql
  type: clusterIP
